// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem> that renders a dropdown item should add classes when props are changed 1`] = `
<div
  className="DropdownItem DropdownItem--disabled"
  onClick={[Function]}
  role="menuitem"
>
  Another dropdown item
</div>
`;

exports[`<DropdownItem> that renders a dropdown item should render a default item correctly 1`] = `
<div
  className="DropdownItem"
  onClick={[Function]}
  role="menuitem"
>
  A dropdown item
</div>
`;
